# sortasecret

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.sh  wrangler.toml
genkeypair/: Cargo.toml
genkeypair/src/: main.rs
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  ingress.yaml  service.yaml
helm/values/: prod.yaml  staging.yaml
keypair/: Cargo.toml
keypair/src/: lib.rs
src/: cli.rs  cloudflare.rs  genkey.rs  keypair.rs  lib.rs  main.rs  secrets.rs.enc  server.rs
static/: style.css
templates/: homepage.html  script.js  show-html.html
worker/: worker.js
