[package]
name = "sortasecret"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"

[dependencies]
clap = "~2.33"
sodiumoxide = "0.2.2"
base16 = "0.1"
actix-web = { version="1.0", features=["ssl", "rust-tls"] }
serde = "1.0.94"
serde_derive = "1.0.94"
futures = "0.1.28"
awc = "0.2"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
tempfile = "3.1"
