[package]
name = "sortasecret"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"

[dependencies]
clap = "~2.33"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_urlencoded = ""
serde_json = ""
surf = "1.0.3"
askama = "0.8.0"
hyper = "0.13"
tokio = "0.2"
futures-util = ""
keypair = { path = "keypair" }

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
tempfile = "3.1"

[workspace]
members = ["keypair", "genkeypair"]
